<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Loci Method Trainer</string>
	<string name="check_number_instructions">Please type in the number you recall from memory
	</string>
	<string name="show_hint">Show hint</string>
	<string name="hide_hint">Hide hint</string>
	<string name="result_number_right">Great!</string>
	<string name="result_number_wrong">Wrong number!</string>
	<string name="result_text_last_number">Great!</string>
	<string name="result_text_input">Wrong number!</string>
	<string name="main_button_treelist">Loci method demo</string>
	<string name="main_button_information">Help</string>
	<string name="main_button_generate_number">Generate new number</string>
	<string name="main_button_check_last_number">Type in last number</string>
	<string name="main_button_maintain_list">Maintain item list</string>
	<string name="main_button_settings">Settings</string>
	
	<string name="about_button_wikipedia">Method of loci on Wikipedia</string>
	<string name="about_description">This app can help you in training your memory using
		the method of loci</string>
	<string name="translation_goapk">Chinese translation by http://goapk.com</string>
	<string name="button_verify">Verify</string>
	<string name="about_link_wikipedia">http://en.wikipedia.org/wiki/Method_of_loci
	</string>
	<string name="about_link_wiki">http://wiki.github.com/hoffimar/android-memorytrainer/
	</string>
	<string name="about_description_wiki">This is an open source app, feel free to
		contribute. Just go to </string>
	<string name="main_about_button">About</string>
	<string name="button_configure_digits">Change number of digits</string>
	<string name="main_button_statistics">Statistics</string>
	<string name="stats_overview_num_correct">Correct numbers</string>
	<string name="stats_overview_num_incorrect">Incorrect numbers</string>
	<string name="stats_overview_percentage_correct">% of correct numbers</string>
	
	<string name="generate_number_intro">Try to memorize the following number:</string>
	
	<string name="check_number_your_input_label">Your input</string>
	<string name="check_number_last_number_label">Last number</string>
	<string name="check_number_your_input_length_label">Length of your input</string>
	<string name="check_number_last_number_length_label">Length of last number</string>
	<string name="check_number_wrong_length">The length of your number is wrong:</string>
	<string name="list_hundred_no_spreadsheet_available">Please create a spreadsheet at Google Docs with the
		title \'MemoryTrainer\', see the documentation under \'First steps\'
	</string>

	<string name="download_spreadsheets">Download from Google Spreadsheets</string>
	<string name="download_spreadsheets_warning">Downloading will overwrite your existing list items. Are you sure?</string>
	<string name="edit_item_label">Enter the item for the number </string>
	<string name="edit_item_button_save">Save</string>

	<!-- Help -->
	<string name="intro">This app is all about the loci method. This method
		helps you in e.g. memorizing large numbers by creating a story using
		images instead of the numbers itself.</string>
	<string name="first_steps">This is how the app works:\n
		1. Click
		on generate
		number and try to memorize it. You can press menu
		to
		specify the length
		of the number. To memorize it, break it down into
		pairs of digits, and
		associate each 2-digit number with some item,
		animal, ... (you can
		create a spreadsheet at google docs as described
		below so you can see
		which item belongs to the different numbers). You
		usually create a
		story or walkthrough which uses the numbers and items
		you set up.\n
		2.
		After you have memorized the numbers go back and go to
		type in last
		number. There, press verify to see if you were right.
		Each try will be
		recorded and save to your statistics.\n
		3. Press
		statistics to see how
		often you were right or wrong.\n
		4. Go to \'Maintain list\' to maintain
		the items for all 100 numbers. You can also go
		to docs.google.com and
		create a spreadsheet named \"MemoryTrainer\".
		There, in column \'A\'
		fill in an item, animal, or person that you can
		associate with the
		respective row number. E.g., use \'unicorn\' in row
		1. For row 5 you
		could use \'hand\'. Check out the developer\'s
		homepage to see an even
		lengthier description.
	</string>

	<!-- Treelist -->
	<string name="treelist_intro_text">This is the treelist, covering all numbers from 1
		to 10. There is an item associated with each number, the reason is
		shown in brackets. Try to memorize each number and the item to its
		right.</string>
	<string name="treelist_intro_button_continue">Continue</string>
	<string name="treelist_item01">Unicorn (1 horn)</string>
	<string name="treelist_item02">Light switch (2 states)</string>
	<string name="treelist_item03">Stool (3 legs)</string>
	<string name="treelist_item04">Car (4 wheels)</string>
	<string name="treelist_item05">Hand (5 fingers)</string>
	<string name="treelist_item06">Die (6 sides)</string>
	<string name="treelist_item07">Seven dwarfs</string>
	<string name="treelist_item08">Spider (8 legs)</string>
	<string name="treelist_item09">Cat (9 lives)</string>
	<string name="treelist_item10">Church (10 commandments)</string>

	<!-- Treelist Generate Number -->
	<string name="treelist_generate_intro_text">Now try to remember the items for the 5 numbers
		below, by imagining a story using all numbers in the same order. Then
		press continue to type the numbers in on the next screen.</string>
	<string name="treelist_generate_button_continue">Continue</string>
	<string name="treelist_generate_button_hint">Show items</string>

	<!-- Treelist Verify Number -->
	<string name="treelist_verify_intro_text">Now type in the numbers in the same order as they
		were on the last screen and press the button to see if you were right.
	</string>
	<string name="treelist_verify_button">Verify</string>
	<string name="treelist_verify_dialog_positive">Well done! This is how the loci method basically
		works. You could now go back to the main screen and try with some
		larger numbers and a list of 100 items (read the help there if
		needed).</string>
	<string name="treelist_verify_dialog_negative">Your number doesn\'t match, try again.</string>
	
	<string name="prefs_lower_boundary_title">Lower Boundary</string>
	<string name="prefs_lower_boundary_summary">Set the lower boundary for each of the numbers to remember</string>
	<string name="prefs_upper_boundary_title">Upper Boundary</string>
	<string name="prefs_upper_boundary_summary">Set the upper boundary for each of the numbers to remember</string>

</resources>
