<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="wrap_content"
	android:layout_height="wrap_content" android:gravity="center_horizontal">

	<TextView android:id="@+id/TreeListIntro" android:text="@string/treelist_intro_text"
		android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="16sp"></TextView>



	<ScrollView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:padding="5sp">

		<LinearLayout android:orientation="vertical"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:gravity="center_horizontal">
			<TableLayout android:orientation="vertical"
				android:layout_width="wrap_content" android:layout_height="wrap_content">

				<TableRow>
					<TextView android:text="1" style="@style/TreelistItemStyle"></TextView>
					<TextView android:id="@+id/TreeListItem01" android:text="@string/treelist_item01"
						style="@style/TreelistItemStyle"></TextView>
				</TableRow>

				<TableRow>
					<TextView android:text="2" style="@style/TreelistItemStyle"></TextView>
					<TextView android:id="@+id/TreeListItem02" android:text="@string/treelist_item02"
						style="@style/TreelistItemStyle"></TextView>
				</TableRow>

				<TableRow>
					<TextView android:text="3" style="@style/TreelistItemStyle"></TextView>
					<TextView android:id="@+id/TreeListItem03" android:text="@string/treelist_item03"
						style="@style/TreelistItemStyle"></TextView>
				</TableRow>

				<TableRow>
					<TextView android:text="4" style="@style/TreelistItemStyle"></TextView>
					<TextView android:id="@+id/TreeListItem04" android:text="@string/treelist_item04"
						style="@style/TreelistItemStyle"></TextView>
				</TableRow>

				<TableRow>
					<TextView android:text="5" style="@style/TreelistItemStyle"></TextView>
					<TextView android:id="@+id/TreeListItem05" android:text="@string/treelist_item05"
						style="@style/TreelistItemStyle"></TextView>
				</TableRow>

				<TableRow>
					<TextView android:text="6" style="@style/TreelistItemStyle"></TextView>
					<TextView android:id="@+id/TreeListItem06" android:text="@string/treelist_item06"
						style="@style/TreelistItemStyle"></TextView>
				</TableRow>

				<TableRow>
					<TextView android:text="7" style="@style/TreelistItemStyle"></TextView>
					<TextView android:id="@+id/TreeListItem07" android:text="@string/treelist_item07"
						style="@style/TreelistItemStyle"></TextView>
				</TableRow>

				<TableRow>
					<TextView android:text="8" style="@style/TreelistItemStyle"></TextView>
					<TextView android:id="@+id/TreeListItem08" android:text="@string/treelist_item08"
						style="@style/TreelistItemStyle"></TextView>
				</TableRow>

				<TableRow>
					<TextView android:text="9" style="@style/TreelistItemStyle"></TextView>
					<TextView android:id="@+id/TreeListItem09" android:text="@string/treelist_item09"
						style="@style/TreelistItemStyle"></TextView>
				</TableRow>


				<TableRow>
					<TextView android:text="10" style="@style/TreelistItemStyle"></TextView>
					<TextView android:id="@+id/TreeListItem10" android:text="@string/treelist_item10"
						style="@style/TreelistItemStyle"></TextView>
				</TableRow>


			</TableLayout>

			<Button android:id="@+id/TreeListContinueButton" android:text="@string/treelist_intro_button_continue"
				android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
		</LinearLayout>
	</ScrollView>
</LinearLayout>

